script: edit playbook

--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -46,7 +46,7 @@
     apt:
       name: wireshark
       state: latest
-- name: update timezone on all servers
-  hosts: all
-  command: timedatectl set-timezone Africa/Lagos
-  become: yes
+# - name: update timezone on all servers
+#   hosts: all
+#   command: timedatectl set-timezone Africa/Lagos
+#   become: yes
