add change to ansible config file and change host name

--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   agent any
   environment{
-    ANSIBLE_CONFIG = "/home/ubuntu/ansible.cfg"
+    ANSIBLE_CONFIG="${WORKSPACE}/deploy/ansible.cfg"
   }
   stages {
     stage('SCM Checkout') {
