--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -32,47 +32,64 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ---
-- name: Include dynamic variables
-  hosts: all
+- name: install NFS utils
+  become: true
+  become_user: root
+  shell: yum install nfs-utils nfs4-acl-tools -y
+  args:
+    executable: /bin/bash
 
-- name: import the common playbook
-  import_playbook: ../static-assignments/common.yml
-  tags:
-    - always
+- name: Mount an NFS volume
+  mount:
+    src: 172.31.18.118:/mnt/apps
+    path: /var/www
+    opts: rw,nosuid
+    state: unmounted
+    state: mounted
+    fstype: nfs
+
+- name: Start Apache
+  service: name=httpd state=started enabled=true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# ---
+# - name: Include dynamic variables
+#   hosts: all
+
+# - name: import the common playbook
+#   import_playbook: ../static-assignments/common.yml
+#   tags:
+#     - always
 
 #[DEPRECATION WARNING]: 'include' for playbook includes. 
 # You should use 'import_playbook' instead. 
@@ -86,16 +103,16 @@
 #     - always
 
 # -------------------------------------
-- name: include the env-vars playbook
-  import_playbook: ../dynamic-assignments/env-vars.yml
-  tags:
-    - always
+# - name: include the env-vars playbook
+#   import_playbook: ../dynamic-assignments/env-vars.yml
+#   tags:
+#     - always
 
-- name: Testing the env. vars
-  hosts: web_servers
-  tasks:
-    - debug: 
-        msg: "{{enable_apache_lb}}"
+# - name: Testing the env. vars
+#   hosts: web_servers
+#   tasks:
+#     - debug: 
+#         msg: "{{enable_apache_lb}}"
 
 # -------------------------------------
 
@@ -108,8 +125,8 @@
 #   import_playbook: ../static-assignments/db.yml
 
 # configure webservers
-- name: Webserver assignment
-  import_playbook: ../static-assignments/webservers.yml
+# - name: Webserver assignment
+#   import_playbook: ../static-assignments/webservers.yml
 
 # configure loadbalancer
 # - name: Loadbalancers assignment
