--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -34,23 +34,24 @@
 
 ---
 - name: install NFS utils
+  host: deployments
   become: true
   become_user: root
-  shell: yum install nfs-utils nfs4-acl-tools -y
-  args:
-    executable: /bin/bash
-
-- name: Mount an NFS volume
-  mount:
-    src: 172.31.18.118:/mnt/apps
-    path: /var/www
-    opts: rw,nosuid
-    state: unmounted
-    state: mounted
-    fstype: nfs
-
-- name: Start Apache
-  service: name=httpd state=started enabled=true
+  tasks:
+  - name: 'install NFS utils task'
+    shell: yum install nfs-utils nfs4-acl-tools -y
+    args:
+      executable: /bin/bash
+  - name: Mount an NFS volume
+      mount:
+        src: 172.31.18.118:/mnt/apps
+        path: /var/www
+        opts: rw,nosuid
+        state: unmounted
+        state: mounted
+        fstype: nfs
+  - name: Start Apache
+    service: name=httpd state=started enabled=true
 
 
 
