--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -5,7 +5,10 @@ callback_whitelist = profile_tasks
 log_path = ~/.ansible/ansible.log
 host_key_checking = False
 gathering = smart
-stdout_callback=yaml
+# Use the YAML callback plugin.
+stdout_callback = yaml
+# Use the stdout_callback when running ad-hoc commands.
+bin_ansible_callbacks = True
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ControlPath=/tmp/ansible-ssh-%h-%p-%r -o ServerAliveInterval=60 -o ServerAliveCountMax=60
