--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,30 +1,17 @@
 
 ---
-- name: Ensure Wireshack is latest on web, and nfs servers
+- name: Ensure Nginx is latest on LB server
   hosts: deployments
-  become: yes
-  remote_user: ec2-user
-  become_user: root
-  tasks:
-  - name: ensure wireshark is at the latest  version
-    yum:
-      name: wireshark
-      state: present
-
-
-- name: Ensure Wireshack is latest on LB server
-  hosts: deployments
-  remote_user: ubuntu
   become: yes
   become_user: root
   tasks:
-  - name: ensure wireshark is at the latest version
-    apt:
-      name: wireshark
+  - apt:
+      name: nginx
       state: present
+      update_cache: yes
 
 - name: update timezone on all servers
-  hosts: all
+  hosts: deployments
   become: yes
   become_user: root
   tasks:
