--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 timeout = 160
-roles_path = ~/ansible-config-mgt/roles
+roles_path = /home/ubuntu/ansible-config-mgt/roles
 callback_whitelist = profile_tasks
-log_path = ~/.ansible/ansible.log
+log_path = /home/ubuntu/ansible/ansible.log
 host_key_checking = False
 gathering = smart
 # Use the YAML callback plugin.
